language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_removes_all_echos.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  echo wibble(echo 1, 2)\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo wibble(echo 1, 2)
              ↑         
}


----- AFTER ACTION
pub fn main() {
  wibble(1, 2)
}
