language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_removes_does_not_remove_entire_echo_statement_if_its_the_return_of_a_fn.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  fn() {\n    echo 1\n  }\n}"
---
----- BEFORE ACTION
pub fn main() {
  fn() {
    echo 1
    ↑     
  }
}


----- AFTER ACTION
pub fn main() {
  fn() {
    1
  }
}
