language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_removes_entire_echo_statement_used_with_a_var.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  let a = 1\n  echo a\n  Nil\n}"
---
----- BEFORE ACTION
pub fn main() {
  let a = 1
  echo a
  ↑     
  Nil
}


----- AFTER ACTION
pub fn main() {
  let a = 1
  Nil
}
