language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_removes_entire_echo_statement_used_with_literals.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  echo 1\n  Nil\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1
  ↑     
  Nil
}


----- AFTER ACTION
pub fn main() {
  Nil
}
