language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_removes_multiple_entire_echo_statement_used_with_literals_but_stops_at_comments.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  echo 1\n\n  // Oh no I hope I'm not deleted by the code action!!\n  Nil\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1
  ↑     

  // Oh no I hope I'm not deleted by the code action!!
  Nil
}


----- AFTER ACTION
pub fn main() {
  // Oh no I hope I'm not deleted by the code action!!
  Nil
}
